--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URL=mongodb+srv://sobaradsandesh:i151U0iGbVMGmIbc@cluster0.kcupc.mongodb.net/products?retryWrites=true&w=majority&appName=Cluster0
+
+PORT = 3000
